fixed skill height glitch on mobile

--- a/public/static/styles/about.css
+++ b/public/static/styles/about.css
@@ -156,6 +156,13 @@ body {
     }
 }
 
+@media (max-width: 900px) {
+    #skills {
+        height: 100%;
+        min-height: 100%;
+    }
+}
+
 @media (max-width: 768px) {
     #intro {
         flex-direction: column;
@@ -170,7 +177,7 @@ body {
     }
 
     #skills {
-        height: 100vh;
+        height: auto;
     }
 }
 
